// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webpack.config.js properly detects user config files in package mode 1`] = `
{
  "devServer": undefined,
  "devtool": "source-map",
  "entry": () => getEntryPoints(config),
  "experiments": {
    "outputModule": false,
  },
  "externals": {
    "lodash": "commonjs2 lodash",
    "read-pkg": "commonjs2 read-pkg",
    "read-pkg-up": "commonjs2 read-pkg-up",
    "resolve-bin": "commonjs2 resolve-bin",
  },
  "mode": "development",
  "module": {
    "rules": [
      {
        "exclude": input => shouldExclude(input, include),
        "test": /\\^\\(\\?!\\.\\*\\\\\\.d\\\\\\.tsx\\?\\$\\)\\.\\*\\\\\\.\\[tj\\]sx\\?\\$/,
        "use": [
          {
            "loader": "/config/webpack/plugins/noop-loader.js",
          },
          {
            "loader": "/node_modules/babel-loader/lib/index.js",
            "options": {
              "cacheDirectory": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.svg\\$/,
        "use": [
          "@svgr/webpack",
          "url-loader",
        ],
      },
      {
        "exclude": [
          /\\\\\\.module\\\\\\.css\\$/,
        ],
        "test": /\\\\\\.css\\$/,
        "use": [
          {
            "loader": "/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/node_modules/css-loader/dist/cjs.js",
            "options": {
              "sourceMap": true,
              "url": true,
            },
          },
          {
            "loader": "/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {},
            },
          },
          {
            "loader": "/node_modules/sass-loader/dist/cjs.js",
            "options": {
              "api": "legacy",
              "implementation": "/node_modules/sass-embedded/dist/lib/index.js",
              "sassOptions": {
                "quietDeps": true,
                "silenceDeprecations": [
                  "legacy-js-api",
                ],
                "suppressDeprecationWarnings": true,
              },
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "exclude": [
          /\\\\\\.module\\\\\\.scss\\$/,
        ],
        "test": /\\\\\\.\\(sc\\|sa\\)ss\\$/,
        "use": [
          {
            "loader": "/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/node_modules/css-loader/dist/cjs.js",
            "options": {
              "sourceMap": true,
              "url": true,
            },
          },
          {
            "loader": "/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {},
            },
          },
          {
            "loader": "/node_modules/sass-loader/dist/cjs.js",
            "options": {
              "api": "legacy",
              "implementation": "/node_modules/sass-embedded/dist/lib/index.js",
              "sassOptions": {
                "quietDeps": true,
                "silenceDeprecations": [
                  "legacy-js-api",
                ],
                "suppressDeprecationWarnings": true,
              },
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.module\\\\\\.css\\$/,
        "use": [
          {
            "loader": "/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/node_modules/css-loader/dist/cjs.js",
            "options": {
              "import": false,
              "modules": true,
              "sourceMap": true,
              "url": true,
            },
          },
          {
            "loader": "/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {},
            },
          },
          {
            "loader": "/node_modules/sass-loader/dist/cjs.js",
            "options": {
              "api": "legacy",
              "implementation": "/node_modules/sass-embedded/dist/lib/index.js",
              "sassOptions": {
                "quietDeps": true,
                "silenceDeprecations": [
                  "legacy-js-api",
                ],
                "suppressDeprecationWarnings": true,
              },
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.\\(woff\\(2\\)\\?\\|ttf\\|eot\\|svg\\|jpg\\|jpeg\\|png\\|giff\\|webp\\)\\(\\\\\\?v=\\\\d\\+\\\\\\.\\\\d\\+\\\\\\.\\\\d\\+\\)\\?\\$/,
        "type": "asset/resource",
      },
    ],
  },
  "optimization": {
    "concatenateModules": false,
    "minimizer": [
      TerserPlugin: {"test":{},"extractComments":true,"parallel":true,"minimizer":{"options":{"parse":{"ecma":8},"compress":{"ecma":5,"warnings":false,"comparisons":false,"inline":2}}}},
      ImageMinimizerPlugin: {"minimizer":{},"loader":true,"test":{},"deleteOriginalAssets":true},
      ImageMinimizerPlugin: {"minimizer":{},"loader":true,"test":{},"deleteOriginalAssets":true},
    ],
    "runtimeChunk": false,
  },
  "output": {
    "libraryTarget": "commonjs2",
    "path": "/dist",
  },
  "performance": {
    "hints": "warning",
    "maxAssetSize": 10240000,
    "maxEntrypointSize": 40960000,
  },
  "plugins": [
    ESLintWebpackPlugin: {"cache":true,"cacheLocation":"node_modules/.cache/eslint-webpack-plugin/.eslintcache","extensions":"js","emitError":true,"emitWarning":true,"failOnError":false,"resourceQueryExclude":[],"fix":false,"lintDirtyModulesOnly":true},
    MiniCssExtractPlugin: {"ignoreOrder":false,"runtime":true,"chunkFilename":"[id].css"},
    StylelintWebpackPlugin: {"cache":true,"cacheLocation":"node_modules/.cache/stylelint-webpack-plugin/.stylelintcache","extensions":["css","scss","sass"],"emitError":true,"emitWarning":true,"failOnError":false,"context":"/assets","files":"**/*.(s(c|a)ss|css)","allowEmptyInput":true,"lintDirtyModulesOnly":true},
    SVGSpritemapPlugin: {"input":{"options":{},"allowDuplicates":false,"patterns":["./assets/icons/*.svg"]},"output":{"filename":"svg-sprite.svg","svg":{"sizes":false,"attributes":{"style":"position:absolute;","width":"0","height":"0"}},"chunk":{"name":"spritemap","keep":false},"svg4everybody":false,"svgo":{"plugins":[]}},"sprite":{"prefix":"sprite-","prefixStylesSelectors":false,"gutter":0,"generate":{"title":true,"symbol":true,"use":false,"view":false}},"styles":false},
    WebpackBarPlugin: {"name":"webpack","color":"green","reporters":["basic"],"reporter":null},
    CleanExtractedDeps: {},
    WebpackRemoveEmptyScriptsPlugin: {"enabled":true,"verbose":false,"extensions":{},"ignore":[],"remove":{}},
    DSToolkitTscPlugin: {},
  ],
  "resolve": {
    "alias": {
      "lodash-es": "lodash",
    },
    "extensions": [
      ".tsx",
      ".ts",
      ".js",
    ],
  },
  "stats": {
    "all": false,
    "assets": true,
    "errorDetails": true,
    "errors": true,
    "excludeAssets": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\|svg\\|woff\\|woff2\\)\\$/i,
    "moduleTrace": true,
    "modules": true,
    "performance": true,
    "warnings": true,
  },
  "target": "browserslist:> 1%, Firefox ESR, last 2 versions, not ie <= 11, not ie_mob <=11",
}
`;

exports[`webpack.config.js properly detects user config files in project mode 1`] = `
{
  "devServer": undefined,
  "devtool": "source-map",
  "entry": () => getEntryPoints(config),
  "experiments": {
    "outputModule": false,
  },
  "externals": {
    "jquery": "jQuery",
    "lodash": "lodash",
  },
  "mode": "development",
  "module": {
    "rules": [
      {
        "exclude": input => shouldExclude(input, include),
        "test": /\\^\\(\\?!\\.\\*\\\\\\.d\\\\\\.tsx\\?\\$\\)\\.\\*\\\\\\.\\[tj\\]sx\\?\\$/,
        "use": [
          {
            "loader": "/config/webpack/plugins/noop-loader.js",
          },
          {
            "loader": "/node_modules/babel-loader/lib/index.js",
            "options": {
              "cacheDirectory": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.svg\\$/,
        "use": [
          "@svgr/webpack",
          "url-loader",
        ],
      },
      {
        "exclude": [
          /\\\\\\.module\\\\\\.css\\$/,
        ],
        "test": /\\\\\\.css\\$/,
        "use": [
          {
            "loader": "/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/node_modules/css-loader/dist/cjs.js",
            "options": {
              "sourceMap": true,
              "url": false,
            },
          },
          {
            "loader": "/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {},
            },
          },
          {
            "loader": "/node_modules/sass-loader/dist/cjs.js",
            "options": {
              "api": "legacy",
              "implementation": "/node_modules/sass-embedded/dist/lib/index.js",
              "sassOptions": {
                "quietDeps": true,
                "silenceDeprecations": [
                  "legacy-js-api",
                ],
                "suppressDeprecationWarnings": true,
              },
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "exclude": [
          /\\\\\\.module\\\\\\.scss\\$/,
        ],
        "test": /\\\\\\.\\(sc\\|sa\\)ss\\$/,
        "use": [
          {
            "loader": "/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/node_modules/css-loader/dist/cjs.js",
            "options": {
              "sourceMap": true,
              "url": false,
            },
          },
          {
            "loader": "/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {},
            },
          },
          {
            "loader": "/node_modules/sass-loader/dist/cjs.js",
            "options": {
              "api": "legacy",
              "implementation": "/node_modules/sass-embedded/dist/lib/index.js",
              "sassOptions": {
                "quietDeps": true,
                "silenceDeprecations": [
                  "legacy-js-api",
                ],
                "suppressDeprecationWarnings": true,
              },
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.module\\\\\\.css\\$/,
        "use": [
          {
            "loader": "/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/node_modules/css-loader/dist/cjs.js",
            "options": {
              "import": false,
              "modules": true,
              "sourceMap": true,
              "url": false,
            },
          },
          {
            "loader": "/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {},
            },
          },
          {
            "loader": "/node_modules/sass-loader/dist/cjs.js",
            "options": {
              "api": "legacy",
              "implementation": "/node_modules/sass-embedded/dist/lib/index.js",
              "sassOptions": {
                "quietDeps": true,
                "silenceDeprecations": [
                  "legacy-js-api",
                ],
                "suppressDeprecationWarnings": true,
              },
              "sourceMap": true,
            },
          },
        ],
      },
    ],
  },
  "optimization": {
    "concatenateModules": false,
    "minimizer": [
      TerserPlugin: {"test":{},"extractComments":true,"parallel":true,"minimizer":{"options":{"parse":{"ecma":8},"compress":{"ecma":5,"warnings":false,"comparisons":false,"inline":2}}}},
      ImageMinimizerPlugin: {"minimizer":{},"loader":true,"test":{},"deleteOriginalAssets":true},
      ImageMinimizerPlugin: {"minimizer":{},"loader":true,"test":{},"deleteOriginalAssets":true},
    ],
    "runtimeChunk": false,
  },
  "output": {
    "chunkFilename": "js/[name].[contenthash].chunk.js",
    "clean": true,
    "filename": pathData => {
      if (pathData.chunk.name === 'runtime') {
        return 'fast-refresh/hmr-runtime.js';
      }
      // match windows and posix paths
      const isBlockAsset = buildFiles[pathData.chunk.name].match(/\\/blocks?\\//) || buildFiles[pathData.chunk.name].match(/\\\\blocks?\\\\/);
      return isBlockAsset ? filenames.block : filenames.js;
    },
    "path": "/dist",
    "publicPath": "/wp-content/themes/digitalsilk-theme/dist/",
  },
  "performance": {
    "hints": "warning",
    "maxAssetSize": 10240000,
    "maxEntrypointSize": 40960000,
  },
  "plugins": [
    ESLintWebpackPlugin: {"cache":true,"cacheLocation":"node_modules/.cache/eslint-webpack-plugin/.eslintcache","extensions":"js","emitError":true,"emitWarning":true,"failOnError":false,"resourceQueryExclude":[],"fix":false,"lintDirtyModulesOnly":true},
    MiniCssExtractPlugin: {"ignoreOrder":false,"runtime":true,"chunkFilename":"[id].css"},
    CopyPlugin: {},
    StylelintWebpackPlugin: {"cache":true,"cacheLocation":"node_modules/.cache/stylelint-webpack-plugin/.stylelintcache","extensions":["css","scss","sass"],"emitError":true,"emitWarning":true,"failOnError":false,"context":"/assets2","files":"**/*.(s(c|a)ss|css)","allowEmptyInput":true,"lintDirtyModulesOnly":true},
    SVGSpritemapPlugin: {"input":{"options":{},"allowDuplicates":false,"patterns":["./assets/icons/*.svg"]},"output":{"filename":"svg-sprite.svg","svg":{"sizes":false,"attributes":{"style":"position:absolute;","width":"0","height":"0"}},"chunk":{"name":"spritemap","keep":false},"svg4everybody":false,"svgo":{"plugins":[]}},"sprite":{"prefix":"sprite-","prefixStylesSelectors":false,"gutter":0,"generate":{"title":true,"symbol":true,"use":false,"view":false}},"styles":false},
    WebpackBarPlugin: {"name":"webpack","color":"green","reporters":["basic"],"reporter":null},
    DependencyExtractionWebpackPlugin: {"combineAssets":false,"combinedOutputFile":null,"externalizedReport":false,"injectPolyfill":false,"outputFormat":"php","outputFilename":null,"useDefaults":true},
    CleanExtractedDeps: {},
    WebpackRemoveEmptyScriptsPlugin: {"enabled":true,"verbose":false,"extensions":{},"ignore":[],"remove":{}},
    DSToolkitTscPlugin: {},
  ],
  "resolve": {
    "alias": {
      "lodash-es": "lodash",
    },
    "extensions": [
      ".tsx",
      ".ts",
      ".js",
    ],
  },
  "stats": {
    "all": false,
    "assets": true,
    "errorDetails": true,
    "errors": true,
    "excludeAssets": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\|svg\\|woff\\|woff2\\)\\$/i,
    "moduleTrace": true,
    "modules": true,
    "performance": true,
    "warnings": true,
  },
  "target": "browserslist:> 1%, Firefox ESR, last 2 versions, not ie <= 11, not ie_mob <=11",
}
`;

exports[`webpack.config.js returns proper configs for package config 1`] = `
{
  "devServer": undefined,
  "devtool": "source-map",
  "entry": () => getEntryPoints(config),
  "experiments": {
    "outputModule": false,
  },
  "externals": {
    "read-pkg": "commonjs2 read-pkg",
    "read-pkg-up": "commonjs2 read-pkg-up",
    "resolve-bin": "commonjs2 resolve-bin",
  },
  "mode": "development",
  "module": {
    "rules": [
      {
        "exclude": input => shouldExclude(input, include),
        "test": /\\^\\(\\?!\\.\\*\\\\\\.d\\\\\\.tsx\\?\\$\\)\\.\\*\\\\\\.\\[tj\\]sx\\?\\$/,
        "use": [
          {
            "loader": "/config/webpack/plugins/noop-loader.js",
          },
          {
            "loader": "/node_modules/babel-loader/lib/index.js",
            "options": {
              "babelrc": false,
              "cacheDirectory": true,
              "configFile": false,
              "plugins": [],
              "presets": [
                [
                  "/packages/babel-preset-default/index.js",
                  {
                    "targets": [
                      "> 1%",
                      "Firefox ESR",
                      "last 2 versions",
                      "not ie <= 11",
                      "not ie_mob <=11",
                    ],
                    "useBuiltIns": false,
                    "wordpress": true,
                  },
                ],
              ],
              "sourceType": "unambiguous",
            },
          },
        ],
      },
      {
        "test": /\\\\\\.svg\\$/,
        "use": [
          "@svgr/webpack",
          "url-loader",
        ],
      },
      {
        "exclude": [
          /\\\\\\.module\\\\\\.css\\$/,
        ],
        "test": /\\\\\\.css\\$/,
        "use": [
          {
            "loader": "/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/node_modules/css-loader/dist/cjs.js",
            "options": {
              "sourceMap": true,
              "url": true,
            },
          },
          {
            "loader": "/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {
                "config": "/config/postcss.config.js",
              },
            },
          },
          {
            "loader": "/node_modules/sass-loader/dist/cjs.js",
            "options": {
              "api": "legacy",
              "implementation": "/node_modules/sass-embedded/dist/lib/index.js",
              "sassOptions": {
                "quietDeps": true,
                "silenceDeprecations": [
                  "legacy-js-api",
                ],
                "suppressDeprecationWarnings": true,
              },
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "exclude": [
          /\\\\\\.module\\\\\\.scss\\$/,
        ],
        "test": /\\\\\\.\\(sc\\|sa\\)ss\\$/,
        "use": [
          {
            "loader": "/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/node_modules/css-loader/dist/cjs.js",
            "options": {
              "sourceMap": true,
              "url": true,
            },
          },
          {
            "loader": "/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {
                "config": "/config/postcss.config.js",
              },
            },
          },
          {
            "loader": "/node_modules/sass-loader/dist/cjs.js",
            "options": {
              "api": "legacy",
              "implementation": "/node_modules/sass-embedded/dist/lib/index.js",
              "sassOptions": {
                "quietDeps": true,
                "silenceDeprecations": [
                  "legacy-js-api",
                ],
                "suppressDeprecationWarnings": true,
              },
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.module\\\\\\.css\\$/,
        "use": [
          {
            "loader": "/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/node_modules/css-loader/dist/cjs.js",
            "options": {
              "import": false,
              "modules": true,
              "sourceMap": true,
              "url": true,
            },
          },
          {
            "loader": "/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {
                "config": "/config/postcss.config.js",
              },
            },
          },
          {
            "loader": "/node_modules/sass-loader/dist/cjs.js",
            "options": {
              "api": "legacy",
              "implementation": "/node_modules/sass-embedded/dist/lib/index.js",
              "sassOptions": {
                "quietDeps": true,
                "silenceDeprecations": [
                  "legacy-js-api",
                ],
                "suppressDeprecationWarnings": true,
              },
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.\\(woff\\(2\\)\\?\\|ttf\\|eot\\|svg\\|jpg\\|jpeg\\|png\\|giff\\|webp\\)\\(\\\\\\?v=\\\\d\\+\\\\\\.\\\\d\\+\\\\\\.\\\\d\\+\\)\\?\\$/,
        "type": "asset/resource",
      },
    ],
  },
  "optimization": {
    "concatenateModules": false,
    "minimizer": [
      TerserPlugin: {"test":{},"extractComments":true,"parallel":true,"minimizer":{"options":{"parse":{"ecma":8},"compress":{"ecma":5,"warnings":false,"comparisons":false,"inline":2}}}},
      ImageMinimizerPlugin: {"minimizer":{},"loader":true,"test":{},"deleteOriginalAssets":true},
      ImageMinimizerPlugin: {"minimizer":{},"loader":true,"test":{},"deleteOriginalAssets":true},
    ],
    "runtimeChunk": false,
  },
  "output": {
    "libraryTarget": "commonjs2",
    "path": "/dist",
  },
  "performance": {
    "hints": "warning",
    "maxAssetSize": 10240000,
    "maxEntrypointSize": 40960000,
  },
  "plugins": [
    ESLintWebpackPlugin: {"cache":true,"cacheLocation":"node_modules/.cache/eslint-webpack-plugin/.eslintcache","extensions":"js","emitError":true,"emitWarning":true,"failOnError":false,"resourceQueryExclude":[],"fix":false,"lintDirtyModulesOnly":true},
    MiniCssExtractPlugin: {"ignoreOrder":false,"runtime":true,"chunkFilename":"[id].css"},
    StylelintWebpackPlugin: {"cache":true,"cacheLocation":"node_modules/.cache/stylelint-webpack-plugin/.stylelintcache","extensions":["css","scss","sass"],"emitError":true,"emitWarning":true,"failOnError":false,"context":"/assets","files":"**/*.(s(c|a)ss|css)","allowEmptyInput":true,"lintDirtyModulesOnly":true,"configFile":"/config/stylelint.config.js"},
    SVGSpritemapPlugin: {"input":{"options":{},"allowDuplicates":false,"patterns":["./assets/icons/*.svg"]},"output":{"filename":"svg-sprite.svg","svg":{"sizes":false,"attributes":{"style":"position:absolute;","width":"0","height":"0"}},"chunk":{"name":"spritemap","keep":false},"svg4everybody":false,"svgo":{"plugins":[]}},"sprite":{"prefix":"sprite-","prefixStylesSelectors":false,"gutter":0,"generate":{"title":true,"symbol":true,"use":false,"view":false}},"styles":false},
    WebpackBarPlugin: {"name":"webpack","color":"green","reporters":["basic"],"reporter":null},
    CleanExtractedDeps: {},
    WebpackRemoveEmptyScriptsPlugin: {"enabled":true,"verbose":false,"extensions":{},"ignore":[],"remove":{}},
    DSToolkitTscPlugin: {},
  ],
  "resolve": {
    "alias": {
      "lodash-es": "lodash",
    },
    "extensions": [
      ".tsx",
      ".ts",
      ".js",
    ],
  },
  "stats": {
    "all": false,
    "assets": true,
    "errorDetails": true,
    "errors": true,
    "excludeAssets": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\|svg\\|woff\\|woff2\\)\\$/i,
    "moduleTrace": true,
    "modules": true,
    "performance": true,
    "warnings": true,
  },
  "target": "browserslist:> 1%, Firefox ESR, last 2 versions, not ie <= 11, not ie_mob <=11",
}
`;

exports[`webpack.config.js returns proper configs for package config with commonjs2 format 1`] = `
{
  "devServer": undefined,
  "devtool": "source-map",
  "entry": () => getEntryPoints(config),
  "experiments": {
    "outputModule": false,
  },
  "externals": {
    "read-pkg": "commonjs2 read-pkg",
    "read-pkg-up": "commonjs2 read-pkg-up",
    "resolve-bin": "commonjs2 resolve-bin",
  },
  "mode": "development",
  "module": {
    "rules": [
      {
        "exclude": input => shouldExclude(input, include),
        "test": /\\^\\(\\?!\\.\\*\\\\\\.d\\\\\\.tsx\\?\\$\\)\\.\\*\\\\\\.\\[tj\\]sx\\?\\$/,
        "use": [
          {
            "loader": "/config/webpack/plugins/noop-loader.js",
          },
          {
            "loader": "/node_modules/babel-loader/lib/index.js",
            "options": {
              "babelrc": false,
              "cacheDirectory": true,
              "configFile": false,
              "plugins": [],
              "presets": [
                [
                  "/packages/babel-preset-default/index.js",
                  {
                    "targets": [
                      "> 1%",
                      "Firefox ESR",
                      "last 2 versions",
                      "not ie <= 11",
                      "not ie_mob <=11",
                    ],
                    "useBuiltIns": false,
                    "wordpress": true,
                  },
                ],
              ],
              "sourceType": "unambiguous",
            },
          },
        ],
      },
      {
        "test": /\\\\\\.svg\\$/,
        "use": [
          "@svgr/webpack",
          "url-loader",
        ],
      },
      {
        "exclude": [
          /\\\\\\.module\\\\\\.css\\$/,
        ],
        "test": /\\\\\\.css\\$/,
        "use": [
          {
            "loader": "/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/node_modules/css-loader/dist/cjs.js",
            "options": {
              "sourceMap": true,
              "url": true,
            },
          },
          {
            "loader": "/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {
                "config": "/config/postcss.config.js",
              },
            },
          },
          {
            "loader": "/node_modules/sass-loader/dist/cjs.js",
            "options": {
              "api": "legacy",
              "implementation": "/node_modules/sass-embedded/dist/lib/index.js",
              "sassOptions": {
                "quietDeps": true,
                "silenceDeprecations": [
                  "legacy-js-api",
                ],
                "suppressDeprecationWarnings": true,
              },
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "exclude": [
          /\\\\\\.module\\\\\\.scss\\$/,
        ],
        "test": /\\\\\\.\\(sc\\|sa\\)ss\\$/,
        "use": [
          {
            "loader": "/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/node_modules/css-loader/dist/cjs.js",
            "options": {
              "sourceMap": true,
              "url": true,
            },
          },
          {
            "loader": "/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {
                "config": "/config/postcss.config.js",
              },
            },
          },
          {
            "loader": "/node_modules/sass-loader/dist/cjs.js",
            "options": {
              "api": "legacy",
              "implementation": "/node_modules/sass-embedded/dist/lib/index.js",
              "sassOptions": {
                "quietDeps": true,
                "silenceDeprecations": [
                  "legacy-js-api",
                ],
                "suppressDeprecationWarnings": true,
              },
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.module\\\\\\.css\\$/,
        "use": [
          {
            "loader": "/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/node_modules/css-loader/dist/cjs.js",
            "options": {
              "import": false,
              "modules": true,
              "sourceMap": true,
              "url": true,
            },
          },
          {
            "loader": "/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {
                "config": "/config/postcss.config.js",
              },
            },
          },
          {
            "loader": "/node_modules/sass-loader/dist/cjs.js",
            "options": {
              "api": "legacy",
              "implementation": "/node_modules/sass-embedded/dist/lib/index.js",
              "sassOptions": {
                "quietDeps": true,
                "silenceDeprecations": [
                  "legacy-js-api",
                ],
                "suppressDeprecationWarnings": true,
              },
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.\\(woff\\(2\\)\\?\\|ttf\\|eot\\|svg\\|jpg\\|jpeg\\|png\\|giff\\|webp\\)\\(\\\\\\?v=\\\\d\\+\\\\\\.\\\\d\\+\\\\\\.\\\\d\\+\\)\\?\\$/,
        "type": "asset/resource",
      },
    ],
  },
  "optimization": {
    "concatenateModules": false,
    "minimizer": [
      TerserPlugin: {"test":{},"extractComments":true,"parallel":true,"minimizer":{"options":{"parse":{"ecma":8},"compress":{"ecma":5,"warnings":false,"comparisons":false,"inline":2}}}},
      ImageMinimizerPlugin: {"minimizer":{},"loader":true,"test":{},"deleteOriginalAssets":true},
      ImageMinimizerPlugin: {"minimizer":{},"loader":true,"test":{},"deleteOriginalAssets":true},
    ],
    "runtimeChunk": false,
  },
  "output": {
    "libraryTarget": "commonjs2",
    "path": "/dist",
  },
  "performance": {
    "hints": "warning",
    "maxAssetSize": 10240000,
    "maxEntrypointSize": 40960000,
  },
  "plugins": [
    ESLintWebpackPlugin: {"cache":true,"cacheLocation":"node_modules/.cache/eslint-webpack-plugin/.eslintcache","extensions":"js","emitError":true,"emitWarning":true,"failOnError":false,"resourceQueryExclude":[],"fix":false,"lintDirtyModulesOnly":true},
    MiniCssExtractPlugin: {"ignoreOrder":false,"runtime":true,"chunkFilename":"[id].css"},
    StylelintWebpackPlugin: {"cache":true,"cacheLocation":"node_modules/.cache/stylelint-webpack-plugin/.stylelintcache","extensions":["css","scss","sass"],"emitError":true,"emitWarning":true,"failOnError":false,"context":"/assets","files":"**/*.(s(c|a)ss|css)","allowEmptyInput":true,"lintDirtyModulesOnly":true,"configFile":"/config/stylelint.config.js"},
    SVGSpritemapPlugin: {"input":{"options":{},"allowDuplicates":false,"patterns":["./assets/icons/*.svg"]},"output":{"filename":"svg-sprite.svg","svg":{"sizes":false,"attributes":{"style":"position:absolute;","width":"0","height":"0"}},"chunk":{"name":"spritemap","keep":false},"svg4everybody":false,"svgo":{"plugins":[]}},"sprite":{"prefix":"sprite-","prefixStylesSelectors":false,"gutter":0,"generate":{"title":true,"symbol":true,"use":false,"view":false}},"styles":false},
    WebpackBarPlugin: {"name":"webpack","color":"green","reporters":["basic"],"reporter":null},
    CleanExtractedDeps: {},
    WebpackRemoveEmptyScriptsPlugin: {"enabled":true,"verbose":false,"extensions":{},"ignore":[],"remove":{}},
    DSToolkitTscPlugin: {},
  ],
  "resolve": {
    "alias": {
      "lodash-es": "lodash",
    },
    "extensions": [
      ".tsx",
      ".ts",
      ".js",
    ],
  },
  "stats": {
    "all": false,
    "assets": true,
    "errorDetails": true,
    "errors": true,
    "excludeAssets": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\|svg\\|woff\\|woff2\\)\\$/i,
    "moduleTrace": true,
    "modules": true,
    "performance": true,
    "warnings": true,
  },
  "target": "browserslist:> 1%, Firefox ESR, last 2 versions, not ie <= 11, not ie_mob <=11",
}
`;

exports[`webpack.config.js returns proper configs for package config with peer deps 1`] = `
{
  "devServer": undefined,
  "devtool": "source-map",
  "entry": () => getEntryPoints(config),
  "experiments": {
    "outputModule": false,
  },
  "externals": {
    "lodash": "commonjs2 lodash",
    "read-pkg": "commonjs2 read-pkg",
    "read-pkg-up": "commonjs2 read-pkg-up",
    "resolve-bin": "commonjs2 resolve-bin",
  },
  "mode": "development",
  "module": {
    "rules": [
      {
        "exclude": input => shouldExclude(input, include),
        "test": /\\^\\(\\?!\\.\\*\\\\\\.d\\\\\\.tsx\\?\\$\\)\\.\\*\\\\\\.\\[tj\\]sx\\?\\$/,
        "use": [
          {
            "loader": "/config/webpack/plugins/noop-loader.js",
          },
          {
            "loader": "/node_modules/babel-loader/lib/index.js",
            "options": {
              "babelrc": false,
              "cacheDirectory": true,
              "configFile": false,
              "plugins": [],
              "presets": [
                [
                  "/packages/babel-preset-default/index.js",
                  {
                    "targets": [
                      "> 1%",
                      "Firefox ESR",
                      "last 2 versions",
                      "not ie <= 11",
                      "not ie_mob <=11",
                    ],
                    "useBuiltIns": false,
                    "wordpress": true,
                  },
                ],
              ],
              "sourceType": "unambiguous",
            },
          },
        ],
      },
      {
        "test": /\\\\\\.svg\\$/,
        "use": [
          "@svgr/webpack",
          "url-loader",
        ],
      },
      {
        "exclude": [
          /\\\\\\.module\\\\\\.css\\$/,
        ],
        "test": /\\\\\\.css\\$/,
        "use": [
          {
            "loader": "/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/node_modules/css-loader/dist/cjs.js",
            "options": {
              "sourceMap": true,
              "url": true,
            },
          },
          {
            "loader": "/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {
                "config": "/config/postcss.config.js",
              },
            },
          },
          {
            "loader": "/node_modules/sass-loader/dist/cjs.js",
            "options": {
              "api": "legacy",
              "implementation": "/node_modules/sass-embedded/dist/lib/index.js",
              "sassOptions": {
                "quietDeps": true,
                "silenceDeprecations": [
                  "legacy-js-api",
                ],
                "suppressDeprecationWarnings": true,
              },
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "exclude": [
          /\\\\\\.module\\\\\\.scss\\$/,
        ],
        "test": /\\\\\\.\\(sc\\|sa\\)ss\\$/,
        "use": [
          {
            "loader": "/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/node_modules/css-loader/dist/cjs.js",
            "options": {
              "sourceMap": true,
              "url": true,
            },
          },
          {
            "loader": "/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {
                "config": "/config/postcss.config.js",
              },
            },
          },
          {
            "loader": "/node_modules/sass-loader/dist/cjs.js",
            "options": {
              "api": "legacy",
              "implementation": "/node_modules/sass-embedded/dist/lib/index.js",
              "sassOptions": {
                "quietDeps": true,
                "silenceDeprecations": [
                  "legacy-js-api",
                ],
                "suppressDeprecationWarnings": true,
              },
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.module\\\\\\.css\\$/,
        "use": [
          {
            "loader": "/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/node_modules/css-loader/dist/cjs.js",
            "options": {
              "import": false,
              "modules": true,
              "sourceMap": true,
              "url": true,
            },
          },
          {
            "loader": "/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {
                "config": "/config/postcss.config.js",
              },
            },
          },
          {
            "loader": "/node_modules/sass-loader/dist/cjs.js",
            "options": {
              "api": "legacy",
              "implementation": "/node_modules/sass-embedded/dist/lib/index.js",
              "sassOptions": {
                "quietDeps": true,
                "silenceDeprecations": [
                  "legacy-js-api",
                ],
                "suppressDeprecationWarnings": true,
              },
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.\\(woff\\(2\\)\\?\\|ttf\\|eot\\|svg\\|jpg\\|jpeg\\|png\\|giff\\|webp\\)\\(\\\\\\?v=\\\\d\\+\\\\\\.\\\\d\\+\\\\\\.\\\\d\\+\\)\\?\\$/,
        "type": "asset/resource",
      },
    ],
  },
  "optimization": {
    "concatenateModules": false,
    "minimizer": [
      TerserPlugin: {"test":{},"extractComments":true,"parallel":true,"minimizer":{"options":{"parse":{"ecma":8},"compress":{"ecma":5,"warnings":false,"comparisons":false,"inline":2}}}},
      ImageMinimizerPlugin: {"minimizer":{},"loader":true,"test":{},"deleteOriginalAssets":true},
      ImageMinimizerPlugin: {"minimizer":{},"loader":true,"test":{},"deleteOriginalAssets":true},
    ],
    "runtimeChunk": false,
  },
  "output": {
    "libraryTarget": "commonjs2",
    "path": "/dist",
  },
  "performance": {
    "hints": "warning",
    "maxAssetSize": 10240000,
    "maxEntrypointSize": 40960000,
  },
  "plugins": [
    ESLintWebpackPlugin: {"cache":true,"cacheLocation":"node_modules/.cache/eslint-webpack-plugin/.eslintcache","extensions":"js","emitError":true,"emitWarning":true,"failOnError":false,"resourceQueryExclude":[],"fix":false,"lintDirtyModulesOnly":true},
    MiniCssExtractPlugin: {"ignoreOrder":false,"runtime":true,"chunkFilename":"[id].css"},
    StylelintWebpackPlugin: {"cache":true,"cacheLocation":"node_modules/.cache/stylelint-webpack-plugin/.stylelintcache","extensions":["css","scss","sass"],"emitError":true,"emitWarning":true,"failOnError":false,"context":"/assets","files":"**/*.(s(c|a)ss|css)","allowEmptyInput":true,"lintDirtyModulesOnly":true,"configFile":"/config/stylelint.config.js"},
    SVGSpritemapPlugin: {"input":{"options":{},"allowDuplicates":false,"patterns":["./assets/icons/*.svg"]},"output":{"filename":"svg-sprite.svg","svg":{"sizes":false,"attributes":{"style":"position:absolute;","width":"0","height":"0"}},"chunk":{"name":"spritemap","keep":false},"svg4everybody":false,"svgo":{"plugins":[]}},"sprite":{"prefix":"sprite-","prefixStylesSelectors":false,"gutter":0,"generate":{"title":true,"symbol":true,"use":false,"view":false}},"styles":false},
    WebpackBarPlugin: {"name":"webpack","color":"green","reporters":["basic"],"reporter":null},
    CleanExtractedDeps: {},
    WebpackRemoveEmptyScriptsPlugin: {"enabled":true,"verbose":false,"extensions":{},"ignore":[],"remove":{}},
    DSToolkitTscPlugin: {},
  ],
  "resolve": {
    "alias": {
      "lodash-es": "lodash",
    },
    "extensions": [
      ".tsx",
      ".ts",
      ".js",
    ],
  },
  "stats": {
    "all": false,
    "assets": true,
    "errorDetails": true,
    "errors": true,
    "excludeAssets": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\|svg\\|woff\\|woff2\\)\\$/i,
    "moduleTrace": true,
    "modules": true,
    "performance": true,
    "warnings": true,
  },
  "target": "browserslist:> 1%, Firefox ESR, last 2 versions, not ie <= 11, not ie_mob <=11",
}
`;

exports[`webpack.config.js returns proper configs for project configs 1`] = `
{
  "devServer": undefined,
  "devtool": "source-map",
  "entry": () => getEntryPoints(config),
  "experiments": {
    "outputModule": false,
  },
  "externals": {
    "jquery": "jQuery",
    "lodash": "lodash",
  },
  "mode": "development",
  "module": {
    "rules": [
      {
        "exclude": input => shouldExclude(input, include),
        "test": /\\^\\(\\?!\\.\\*\\\\\\.d\\\\\\.tsx\\?\\$\\)\\.\\*\\\\\\.\\[tj\\]sx\\?\\$/,
        "use": [
          {
            "loader": "/config/webpack/plugins/noop-loader.js",
          },
          {
            "loader": "/node_modules/babel-loader/lib/index.js",
            "options": {
              "babelrc": false,
              "cacheDirectory": true,
              "configFile": false,
              "plugins": [],
              "presets": [
                [
                  "/packages/babel-preset-default/index.js",
                  {
                    "targets": [
                      "> 1%",
                      "Firefox ESR",
                      "last 2 versions",
                      "not ie <= 11",
                      "not ie_mob <=11",
                    ],
                    "useBuiltIns": "usage",
                    "wordpress": true,
                  },
                ],
              ],
              "sourceType": "unambiguous",
            },
          },
        ],
      },
      {
        "test": /\\\\\\.svg\\$/,
        "use": [
          "@svgr/webpack",
          "url-loader",
        ],
      },
      {
        "exclude": [
          /\\\\\\.module\\\\\\.css\\$/,
        ],
        "test": /\\\\\\.css\\$/,
        "use": [
          {
            "loader": "/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/node_modules/css-loader/dist/cjs.js",
            "options": {
              "sourceMap": true,
              "url": false,
            },
          },
          {
            "loader": "/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {
                "config": "/config/postcss.config.js",
              },
            },
          },
          {
            "loader": "/node_modules/sass-loader/dist/cjs.js",
            "options": {
              "api": "legacy",
              "implementation": "/node_modules/sass-embedded/dist/lib/index.js",
              "sassOptions": {
                "quietDeps": true,
                "silenceDeprecations": [
                  "legacy-js-api",
                ],
                "suppressDeprecationWarnings": true,
              },
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "exclude": [
          /\\\\\\.module\\\\\\.scss\\$/,
        ],
        "test": /\\\\\\.\\(sc\\|sa\\)ss\\$/,
        "use": [
          {
            "loader": "/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/node_modules/css-loader/dist/cjs.js",
            "options": {
              "sourceMap": true,
              "url": false,
            },
          },
          {
            "loader": "/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {
                "config": "/config/postcss.config.js",
              },
            },
          },
          {
            "loader": "/node_modules/sass-loader/dist/cjs.js",
            "options": {
              "api": "legacy",
              "implementation": "/node_modules/sass-embedded/dist/lib/index.js",
              "sassOptions": {
                "quietDeps": true,
                "silenceDeprecations": [
                  "legacy-js-api",
                ],
                "suppressDeprecationWarnings": true,
              },
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.module\\\\\\.css\\$/,
        "use": [
          {
            "loader": "/node_modules/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "/node_modules/css-loader/dist/cjs.js",
            "options": {
              "import": false,
              "modules": true,
              "sourceMap": true,
              "url": false,
            },
          },
          {
            "loader": "/node_modules/postcss-loader/dist/cjs.js",
            "options": {
              "postcssOptions": {
                "config": "/config/postcss.config.js",
              },
            },
          },
          {
            "loader": "/node_modules/sass-loader/dist/cjs.js",
            "options": {
              "api": "legacy",
              "implementation": "/node_modules/sass-embedded/dist/lib/index.js",
              "sassOptions": {
                "quietDeps": true,
                "silenceDeprecations": [
                  "legacy-js-api",
                ],
                "suppressDeprecationWarnings": true,
              },
              "sourceMap": true,
            },
          },
        ],
      },
    ],
  },
  "optimization": {
    "concatenateModules": false,
    "minimizer": [
      TerserPlugin: {"test":{},"extractComments":true,"parallel":true,"minimizer":{"options":{"parse":{"ecma":8},"compress":{"ecma":5,"warnings":false,"comparisons":false,"inline":2}}}},
      ImageMinimizerPlugin: {"minimizer":{},"loader":true,"test":{},"deleteOriginalAssets":true},
      ImageMinimizerPlugin: {"minimizer":{},"loader":true,"test":{},"deleteOriginalAssets":true},
    ],
    "runtimeChunk": false,
  },
  "output": {
    "chunkFilename": "js/[name].[contenthash].chunk.js",
    "clean": true,
    "filename": pathData => {
      if (pathData.chunk.name === 'runtime') {
        return 'fast-refresh/hmr-runtime.js';
      }
      // match windows and posix paths
      const isBlockAsset = buildFiles[pathData.chunk.name].match(/\\/blocks?\\//) || buildFiles[pathData.chunk.name].match(/\\\\blocks?\\\\/);
      return isBlockAsset ? filenames.block : filenames.js;
    },
    "path": "/dist",
    "publicPath": "/wp-content/themes/digitalsilk-theme/dist/",
  },
  "performance": {
    "hints": "warning",
    "maxAssetSize": 10240000,
    "maxEntrypointSize": 40960000,
  },
  "plugins": [
    ESLintWebpackPlugin: {"cache":true,"cacheLocation":"node_modules/.cache/eslint-webpack-plugin/.eslintcache","extensions":"js","emitError":true,"emitWarning":true,"failOnError":false,"resourceQueryExclude":[],"fix":false,"lintDirtyModulesOnly":true},
    MiniCssExtractPlugin: {"ignoreOrder":false,"runtime":true,"chunkFilename":"[id].css"},
    CopyPlugin: {},
    NoBrowserSyncPlugin: {},
    StylelintWebpackPlugin: {"cache":true,"cacheLocation":"node_modules/.cache/stylelint-webpack-plugin/.stylelintcache","extensions":["css","scss","sass"],"emitError":true,"emitWarning":true,"failOnError":false,"context":"/assets2","files":"**/*.(s(c|a)ss|css)","allowEmptyInput":true,"lintDirtyModulesOnly":true,"configFile":"/config/stylelint.config.js"},
    SVGSpritemapPlugin: {"input":{"options":{},"allowDuplicates":false,"patterns":["./assets/icons/*.svg"]},"output":{"filename":"svg-sprite.svg","svg":{"sizes":false,"attributes":{"style":"position:absolute;","width":"0","height":"0"}},"chunk":{"name":"spritemap","keep":false},"svg4everybody":false,"svgo":{"plugins":[]}},"sprite":{"prefix":"sprite-","prefixStylesSelectors":false,"gutter":0,"generate":{"title":true,"symbol":true,"use":false,"view":false}},"styles":false},
    WebpackBarPlugin: {"name":"webpack","color":"green","reporters":["basic"],"reporter":null},
    DependencyExtractionWebpackPlugin: {"combineAssets":false,"combinedOutputFile":null,"externalizedReport":false,"injectPolyfill":false,"outputFormat":"php","outputFilename":null,"useDefaults":true},
    CleanExtractedDeps: {},
    WebpackRemoveEmptyScriptsPlugin: {"enabled":true,"verbose":false,"extensions":{},"ignore":[],"remove":{}},
    DSToolkitTscPlugin: {},
  ],
  "resolve": {
    "alias": {
      "lodash-es": "lodash",
    },
    "extensions": [
      ".tsx",
      ".ts",
      ".js",
    ],
  },
  "stats": {
    "all": false,
    "assets": true,
    "errorDetails": true,
    "errors": true,
    "excludeAssets": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\|svg\\|woff\\|woff2\\)\\$/i,
    "moduleTrace": true,
    "modules": true,
    "performance": true,
    "warnings": true,
  },
  "target": "browserslist:> 1%, Firefox ESR, last 2 versions, not ie <= 11, not ie_mob <=11",
}
`;
